Bug 1874705: Run invalidation on appended elements even if the first node is not an element. r=firefox-style-system-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D198604