servo/ports/geckolib/glue.rs
@@ -6948,11 +6948,11 @@ fn add_relative_selector_attribute_dependency<'a>(
 }
 
 fn inherit_relative_selector_search_direction(
-    element: &GeckoElement,
+    parent: Option<GeckoElement>,
     prev_sibling: Option<GeckoElement>,
 ) -> ElementSelectorFlags {
     let mut inherited = ElementSelectorFlags::empty();
-    if let Some(parent) = element.parent_element() {
+    if let Some(parent) = parent {
         if let Some(direction) = parent.relative_selector_search_direction() {
             inherited |= direction
                 .intersection(ElementSelectorFlags::RELATIVE_SELECTOR_SEARCH_DIRECTION_ANCESTOR);
@@ -7271,7 +7271,7 @@ pub extern "C" fn Servo_StyleSet_MaybeInvalidateRelativeSelectorForInsertion(
     let quirks_mode: QuirksMode = data.stylist.quirks_mode();
 
     let inherited =
-        inherit_relative_selector_search_direction(&element, element.prev_sibling_element());
+        inherit_relative_selector_search_direction(element.parent_element(), element.prev_sibling_element());
     // Technically, we're not handling breakouts, where the anchor is a (later-sibling) descendant.
     // For descendant case, we're ok since it's a descendant of an element yet to be styled.
     // For later-sibling descendant, `HAS_SLOW_SELECTOR_LATER_SIBLINGS` is set anyway.
@@ -7349,19 +7349,25 @@ pub extern "C" fn Servo_StyleSet_MaybeInvalidateRelativeSelectorForInsertion(
 #[no_mangle]
 pub extern "C" fn Servo_StyleSet_MaybeInvalidateRelativeSelectorForAppend(
     raw_data: &PerDocumentStyleData,
-    first_element: &RawGeckoElement,
+    first_node: &RawGeckoNode,
 ) {
-    let first_element = GeckoElement(first_element);
-    let data = raw_data.borrow();
-    let quirks_mode: QuirksMode = data.stylist.quirks_mode();
-
+    let first_node = GeckoNode(first_node);
     let inherited = inherit_relative_selector_search_direction(
-        &first_element,
-        first_element.prev_sibling_element(),
+        first_node.parent_element(),
+        first_node.prev_sibling_element(),
     );
     if inherited.is_empty() {
         return;
     }
+    let first_element = if let Some(e) = first_node.as_element() {
+        e
+    } else if let Some(e) = first_node.next_sibling_element() {
+        e
+    } else {
+        return;
+    };
+    let data = raw_data.borrow();
+    let quirks_mode: QuirksMode = data.stylist.quirks_mode();
 
     let mut element = Some(first_element);
     while let Some(e) = element {
@@ -7418,7 +7424,7 @@ pub extern "C" fn Servo_StyleSet_MaybeInvalidateRelativeSelectorForRemoval(
     let data = raw_data.borrow();
     let quirks_mode: QuirksMode = data.stylist.quirks_mode();
 
-    let inherited = inherit_relative_selector_search_direction(&element, prev_sibling);
+    let inherited = inherit_relative_selector_search_direction(element.parent_element(), prev_sibling);
     if inherited.is_empty() {
         return;
     }
